connect: Add LXC to 'open connection' dialog

--- a/src/vmm-open-connection.glade
+++ b/src/vmm-open-connection.glade
@@ -24,7 +24,8 @@
               <widget class="GtkComboBox" id="hypervisor">
                 <property name="visible">True</property>
                 <property name="items" translatable="yes">Xen
-QEMU/KVM</property>
+QEMU/KVM
+LXC (Linux Containers)</property>
                 <accessibility>
                   <atkproperty name="AtkObject::accessible-name" translatable="yes">Hypervisor Select</atkproperty>
                 </accessibility>
