--- a/src/vmm-manager.glade
+++ b/src/vmm-manager.glade
@@ -144,12 +144,20 @@
                           <widget class="GtkMenu" id="menu1">
                             <property name="visible">True</property>
                             <child>
-                              <widget class="GtkCheckMenuItem" id="menu_view_stats_cpu">
+                              <widget class="GtkCheckMenuItem" id="menu_view_stats_guest_cpu">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">_CPU Usage</property>
+                                <property name="label" translatable="yes">_Guest CPU Usage</property>
                                 <property name="use_underline">True</property>
                                 <property name="active">True</property>
-                                <signal name="activate" handler="on_menu_view_cpu_usage_activate"/>
+                                <signal name="activate" handler="on_menu_view_guest_cpu_usage_activate"/>
+                              </widget>
+                            </child>
+                            <child>
+                              <widget class="GtkCheckMenuItem" id="menu_view_stats_host_cpu">
+                                <property name="visible">True</property>
+                                <property name="label" translatable="yes">_Host CPU Usage</property>
+                                <property name="use_underline">True</property>
+                                <signal name="activate" handler="on_menu_view_host_cpu_usage_activate"/>
                               </widget>
                             </child>
                             <child>
