--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -532,6 +532,7 @@
                     <property name="use_markup">True</property>
                     <property name="justify">center</property>
                     <property name="wrap">True</property>
+                    <property name="width_chars">40</property>
                   </widget>
                   <packing>
                     <property name="tab_expand">True</property>
@@ -5493,27 +5494,27 @@ I/O:</property>
                               </packing>
                             </child>
                             <child>
-                              <widget class="GtkVBox" id="vbox58">
+                              <widget class="GtkVBox" id="vbox16">
                                 <property name="visible">True</property>
                                 <child>
-                                  <widget class="GtkFrame" id="frame13">
+                                  <widget class="GtkFrame" id="frame17">
                                     <property name="visible">True</property>
                                     <property name="label_xalign">0</property>
                                     <property name="shadow_type">none</property>
                                     <child>
-                                      <widget class="GtkAlignment" id="alignment159">
+                                      <widget class="GtkAlignment" id="alignment43">
                                         <property name="visible">True</property>
                                         <property name="top_padding">3</property>
                                         <property name="left_padding">12</property>
                                         <child>
-                                          <widget class="GtkTable" id="table36">
+                                          <widget class="GtkTable" id="table17">
                                             <property name="visible">True</property>
                                             <property name="border_width">3</property>
                                             <property name="n_columns">2</property>
                                             <property name="column_spacing">8</property>
                                             <property name="row_spacing">4</property>
                                             <child>
-                                              <widget class="GtkLabel" id="label452">
+                                              <widget class="GtkLabel" id="label41">
                                                 <property name="visible">True</property>
                                                 <property name="xalign">0</property>
                                                 <property name="label" translatable="yes">M_ode:</property>
@@ -5526,7 +5527,7 @@ I/O:</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkHBox" id="hbox11">
+                                              <widget class="GtkHBox" id="hbox22">
                                                 <property name="visible">True</property>
                                                 <child>
                                                   <widget class="GtkComboBox" id="smartcard-mode-combo">
@@ -5562,7 +5563,7 @@ I/O:</property>
                                       </widget>
                                     </child>
                                     <child>
-                                      <widget class="GtkLabel" id="label451">
+                                      <widget class="GtkLabel" id="label70">
                                         <property name="visible">True</property>
                                         <property name="label" translatable="yes">&lt;b&gt;Smartcard Device&lt;/b&gt;</property>
                                         <property name="use_markup">True</property>
@@ -5582,7 +5583,7 @@ I/O:</property>
                               </packing>
                             </child>
                             <child>
-                              <widget class="GtkLabel" id="label440">
+                              <widget class="GtkLabel" id="label71">
                                 <property name="visible">True</property>
                                 <property name="label">snd</property>
                               </widget>
@@ -5654,7 +5655,7 @@ I/O:</property>
               </packing>
             </child>
             <child>
-              <widget class="GtkLabel" id="label41">
+              <widget class="GtkLabel" id="label72">
                 <property name="visible">True</property>
                 <property name="label">Details</property>
               </widget>
