--- a/src/vmm-about.glade
+++ b/src/vmm-about.glade
@@ -7,7 +7,7 @@
     <property name="destroy_with_parent">True</property>
     <property name="type_hint">dialog</property>
     <property name="program_name">Virtual Machine Manager</property>
-    <property name="copyright" translatable="yes">Copyright (C) 2006-2010 Red Hat Inc.</property>
+    <property name="copyright" translatable="yes">Copyright (C) 2006-2011 Red Hat Inc.</property>
     <property name="comments" translatable="yes">Powered by libvirt</property>
     <property name="website">http://virt-manager.org/</property>
     <property name="website_label">http://virt-manager.org/</property>
@@ -26,16 +26,16 @@
     Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 </property>
     <property name="authors">Daniel P. Berrange &lt;berrange@redhat.com&gt;
-Hugh O. Brock &lt;hbrock@redhat.com&gt;
-Máirín Duffy &lt;duffy@redhat.com&gt;
-Jeremy Katz &lt;katzj@redhat.com&gt;
 Cole Robinson &lt;crobinso@redhat.com&gt;
+Hugh O. Brock &lt;hbrock@redhat.com&gt;
 </property>
     <property name="translator_credits" translatable="yes" comments="TRANSLATORS: Replace this string with your names, one name per line.">translator-credits</property>
     <property name="artists">Máirín Duffy &lt;duffy@redhat.com&gt;
 Mike Langlie &lt;mlanglie@redhat.com&gt;
 Jeremy Perry &lt;jeperry@redhat.com&gt;
+Jakub Steiner &lt;jsteiner@redhat.com&gt;
 </property>
+    <property name="logo_icon_name">virt-manager</property>
     <signal name="response" handler="on_vmm_about_response"/>
     <signal name="delete_event" handler="on_vmm_about_delete_event"/>
     <child internal-child="vbox">
