addhw: Fix 'info' icon in gfx page

--- a/src/vmm-add-hardware.glade
+++ b/src/vmm-add-hardware.glade
@@ -943,7 +943,7 @@
                                                   <widget class="GtkImage" id="image107">
                                                     <property name="visible">True</property>
                                                     <property name="yalign">0</property>
-                                                    <property name="icon_name">gtk-dialog-info</property>
+                                                    <property name="stock">gtk-dialog-info</property>
                                                   </widget>
                                                   <packing>
                                                     <property name="expand">False</property>
@@ -2204,22 +2204,21 @@ access in the guest.</property>
                                 <property name="position">1</property>
                               </packing>
                             </child>
-
                           </widget>
                           <packing>
                             <property name="position">10</property>
                           </packing>
                         </child>
                         <child>
-                          <widget class="GtkVBox" id="page5-box">
+                          <widget class="GtkVBox" id="page5-box1">
                             <property name="visible">True</property>
                             <property name="border_width">1</property>
                             <child>
-                              <widget class="GtkVBox" id="vbox3">
+                              <widget class="GtkVBox" id="vbox1">
                                 <property name="visible">True</property>
                                 <property name="spacing">12</property>
                                 <child>
-                                  <widget class="GtkLabel" id="label8">
+                                  <widget class="GtkLabel" id="label14">
                                     <property name="visible">True</property>
                                     <property name="xalign">0</property>
                                     <property name="label" translatable="yes">Please indicate what smartcard device mode to connect to the virtual machine.</property>
@@ -2233,11 +2232,11 @@ access in the guest.</property>
                                   </packing>
                                 </child>
                                 <child>
-                                  <widget class="GtkAlignment" id="alignment4">
+                                  <widget class="GtkAlignment" id="alignment19">
                                     <property name="visible">True</property>
                                     <property name="left_padding">24</property>
                                     <child>
-                                      <widget class="GtkTable" id="table2">
+                                      <widget class="GtkTable" id="table10">
                                         <property name="visible">True</property>
                                         <property name="n_columns">2</property>
                                         <property name="column_spacing">12</property>
@@ -2253,7 +2252,7 @@ access in the guest.</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkLabel" id="label10">
+                                          <widget class="GtkLabel" id="label30">
                                             <property name="visible">True</property>
                                             <property name="xalign">1</property>
                                             <property name="label" translatable="yes">_Mode:</property>
@@ -2284,7 +2283,7 @@ access in the guest.</property>
                           </packing>
                         </child>
                         <child>
-                          <widget class="GtkLabel" id="label14">
+                          <widget class="GtkLabel" id="label32">
                             <property name="visible">True</property>
                             <property name="label">fs</property>
                           </widget>
