addhw: Use header case for dialog title

--- a/src/vmm-add-hardware.glade
+++ b/src/vmm-add-hardware.glade
@@ -4,7 +4,7 @@
   <!-- interface-naming-policy toplevel-contextual -->
   <widget class="GtkWindow" id="vmm-add-hardware">
     <property name="visible">True</property>
-    <property name="title" translatable="yes">Add new virtual hardware</property>
+    <property name="title" translatable="yes">Add New Virtual Hardware</property>
     <property name="type_hint">dialog</property>
     <signal name="delete_event" handler="on_vmm_create_delete_event"/>
     <child>
