--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -3362,7 +3362,7 @@ I/O:</property>
                                                 <child>
                                                   <widget class="GtkTable" id="table11">
                                                     <property name="visible">True</property>
-                                                    <property name="n_rows">3</property>
+                                                    <property name="n_rows">4</property>
                                                     <property name="n_columns">2</property>
                                                     <property name="column_spacing">8</property>
                                                     <property name="row_spacing">3</property>
@@ -3386,8 +3386,8 @@ I/O:</property>
                                                         <property name="mnemonic_widget">disk-format</property>
                                                       </widget>
                                                       <packing>
-                                                        <property name="top_attach">1</property>
-                                                        <property name="bottom_attach">2</property>
+                                                        <property name="top_attach">3</property>
+                                                        <property name="bottom_attach">4</property>
                                                         <property name="x_options">GTK_FILL</property>
                                                       </packing>
                                                     </child>
@@ -3449,8 +3449,8 @@ I/O:</property>
                                                       <packing>
                                                         <property name="left_attach">1</property>
                                                         <property name="right_attach">2</property>
-                                                        <property name="top_attach">1</property>
-                                                        <property name="bottom_attach">2</property>
+                                                        <property name="top_attach">3</property>
+                                                        <property name="bottom_attach">4</property>
                                                         <property name="x_options">GTK_FILL</property>
                                                       </packing>
                                                     </child>
@@ -3458,13 +3458,13 @@ I/O:</property>
                                                       <widget class="GtkLabel" id="label32">
                                                         <property name="visible">True</property>
                                                         <property name="xalign">1</property>
-                                                        <property name="label" translatable="yes">Disk B_us:</property>
+                                                        <property name="label" translatable="yes">Disk b_us:</property>
                                                         <property name="use_underline">True</property>
                                                         <property name="mnemonic_widget">disk-bus-combo</property>
                                                       </widget>
                                                       <packing>
-                                                        <property name="top_attach">2</property>
-                                                        <property name="bottom_attach">3</property>
+                                                        <property name="top_attach">1</property>
+                                                        <property name="bottom_attach">2</property>
                                                         <property name="x_options">GTK_FILL</property>
                                                       </packing>
                                                     </child>
@@ -3490,6 +3490,54 @@ I/O:</property>
                                                             <property name="xalign">0</property>
                                                             <property name="label">Unknown bus</property>
                                                             </widget>
+                                                            </child>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="position">1</property>
+                                                          </packing>
+                                                        </child>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="left_attach">1</property>
+                                                        <property name="right_attach">2</property>
+                                                        <property name="top_attach">1</property>
+                                                        <property name="bottom_attach">2</property>
+                                                      </packing>
+                                                    </child>
+                                                    <child>
+                                                      <widget class="GtkLabel" id="label73">
+                                                        <property name="visible">True</property>
+                                                        <property name="xalign">1</property>
+                                                        <property name="label" translatable="yes">Serial num_ber:</property>
+                                                        <property name="use_underline">True</property>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="top_attach">2</property>
+                                                        <property name="bottom_attach">3</property>
+                                                        <property name="x_options">GTK_FILL</property>
+                                                      </packing>
+                                                    </child>
+                                                    <child>
+                                                      <widget class="GtkHBox" id="hbox23">
+                                                        <property name="visible">True</property>
+                                                        <child>
+                                                          <widget class="GtkEntry" id="disk-serial">
+                                                            <property name="visible">True</property>
+                                                            <property name="can_focus">True</property>
+                                                            <property name="invisible_char">●</property>
+                                                            <property name="width_chars">20</property>
+                                                            <signal name="changed" handler="on_disk_serial_changed"/>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="expand">False</property>
+                                                            <property name="position">0</property>
+                                                          </packing>
+                                                        </child>
+                                                        <child>
+                                                          <widget class="GtkAlignment" id="alignment44">
+                                                            <property name="visible">True</property>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                           </widget>
                                                           <packing>
