details: Fix inspection UI expanding

--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -1239,6 +1239,7 @@
                                     </child>
                                   </widget>
                                   <packing>
+                                    <property name="expand">False</property>
                                     <property name="position">2</property>
                                   </packing>
                                 </child>
@@ -1281,6 +1282,7 @@
                                     </child>
                                   </widget>
                                   <packing>
+                                    <property name="expand">False</property>
                                     <property name="position">3</property>
                                   </packing>
                                 </child>
