--- a/src/vmm-open-connection.glade
+++ b/src/vmm-open-connection.glade
@@ -111,6 +111,7 @@ SSL/TLS with certificates</property>
                 <property name="visible">True</property>
                 <property name="xalign">0</property>
                 <property name="label">uri</property>
+                <property name="ellipsize">end</property>
               </widget>
               <packing>
                 <property name="left_attach">1</property>
