create: By default, only list non-EOL OS options
Using the new info from virtinst. Each drop down now has an option to
'show all OS values' which will repopulate the combo boxes with a complete
listing.

--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -1181,6 +1181,7 @@ is not yet supported.&lt;/small&gt;</property>
                                     <child>
                                       <widget class="GtkComboBox" id="install-os-version">
                                         <property name="visible">True</property>
+                                        <signal name="changed" handler="on_install_os_version_changed"/>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
