--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -245,6 +245,8 @@
                                 <property name="xalign">0</property>
                                 <property name="yalign">0</property>
                                 <property name="label" translatable="yes">Error message</property>
+                                <property name="wrap">True</property>
+                                <property name="width_chars">45</property>
                               </widget>
                               <packing>
                                 <property name="position">1</property>
