virt-manager: Add support for fs readonly attribute
Enables exporting filesytem as a readonly mount for guest, by
default read-write access is given (currently only works for
QEMU/KVM driver)

The support for the same in libvirt was added recently at ...
https://www.redhat.com/archives/libvir-list/2011-December/msg00937.html

Signed-off-by: Deepak C Shetty <deepakcs@linux.vnet.ibm.com>

--- a/src/vmm-add-hardware.glade
+++ b/src/vmm-add-hardware.glade
@@ -2161,6 +2161,22 @@ access in the guest.</property>
                                       </packing>
                                     </child>
                                     <child>
+                                      <widget class="GtkCheckButton" id="fs-readonly">
+                                        <property name="label" translatable="yes">E_xport filesystem as readonly mount</property>
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="receives_default">False</property>
+                                        <property name="use_underline">True</property>
+                                        <property name="draw_indicator">True</property>
+                                      </widget>
+                                      <packing>
+                                        <property name="left_attach">1</property>
+                                        <property name="right_attach">2</property>
+                                        <property name="top_attach">4</property>
+                                        <property name="bottom_attach">5</property>
+                                      </packing>
+                                    </child>
+                                    <child>
                                       <widget class="GtkHBox" id="hbox13">
                                         <property name="visible">True</property>
                                         <property name="spacing">6</property>
